--- a/demo/k8s/aks-deployment.yaml
+++ b/demo/k8s/aks-deployment.yaml
@@ -8,10 +8,6 @@ kind: ServiceAccount
 metadata:
   name: workload-identity-sa
   namespace: demo
-  annotations:
-    azure.workload.identity/client-id: "${AZURE_CLIENT_ID}"
-  labels:
-    azure.workload.identity/use: "true"
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -29,7 +25,6 @@ spec:
     metadata:
       labels:
         app: aks-to-aws
-        azure.workload.identity/use: "true"
     spec:
       serviceAccountName: workload-identity-sa
       containers:
@@ -39,16 +34,16 @@ spec:
         env:
         - name: AWS_ROLE_ARN
           value: "${AWS_ROLE_ARN}"
-        - name: AZURE_CLIENT_ID
-          value: "${AZURE_CLIENT_ID}"
-        - name: AZURE_TENANT_ID
-          value: "${AZURE_TENANT_ID}"
         - name: POD_NAMESPACE
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
         - name: AWS_REGION
           value: "us-west-2"
+        volumeMounts:
+        - name: aws-iam-token
+          mountPath: /var/run/secrets/kubernetes.io/serviceaccount
+          readOnly: true
         resources:
           requests:
             memory: "128Mi"
@@ -60,10 +55,18 @@ spec:
           runAsNonRoot: true
           runAsUser: 1001
           allowPrivilegeEscalation: false
-          readOnlyRootFilesystem: true
+          readOnlyRootFilesystem: false
           capabilities:
             drop:
             - ALL
+      volumes:
+      - name: aws-iam-token
+        projected:
+          sources:
+          - serviceAccountToken:
+              path: token
+              audience: sts.amazonaws.com
+              expirationSeconds: 86400
 ---
 apiVersion: v1
 kind: Service
